--- a/clothing-shop/src/components/home/Home.css
+++ b/clothing-shop/src/components/home/Home.css
@@ -1,4 +1,37 @@
 .wrapper {
-    overflow-x: hidden;
-    overflow-y: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
+
+.navbox {
+  width: 100%;
+  height: auto;
+  border-bottom: 1px olid #e4e4e4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px 25px;
+}
+
+.navbox .leftside {
+  width: 50px;
+  height: 50px;
+}
+
+.navbox .leftside img {
+    width: 100%;
+    height: 100%;
+}
+
+.navbox .rightside {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .navbox .rightside .links{
+   font-size: 12px;
+   color: #000;
+   font-weight: 600;
+   margin: auto 10px;
+  }
