--- a/clothing-shop/src/components/home/Home.css
+++ b/clothing-shop/src/components/home/Home.css
@@ -6,7 +6,7 @@
 .navbox {
   width: 100%;
   height: auto;
-  border-bottom: 1px olid #e4e4e4;
+  border-bottom: 1px solid #e4e4e4;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -15,23 +15,23 @@
 }
 
 .navbox .leftside {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
 }
 
 .navbox .leftside img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .navbox .rightside {
-    display: flex;
-    flex-direction: row;
-  }
+  display: flex;
+  flex-direction: row;
+}
 
-  .navbox .rightside .links{
-   font-size: 12px;
-   color: #000;
-   font-weight: 600;
-   margin: auto 10px;
-  }
+.navbox .rightside .navlinks {
+  font-size: 12px;
+  color: #000;
+  font-weight: 600;
+  margin: auto 10px;
+}
