--- a/clothing-shop/src/index.css
+++ b/clothing-shop/src/index.css
@@ -12,6 +12,12 @@ html, body {
     font-family: "Open Sans", sans-serif;
 }
 
+@media(max-width: 768px) {
+  .mybtn {
+    width: 100%;
+  }
+}
+
 .wrapper{
   overflow-x: hidden;
   overflow-y: auto;
